Adding an index route and instructions to the mobile web interstitial guide page

--- a/views/mwi.pug
+++ b/views/mwi.pug
@@ -8,5 +8,9 @@ html
     script(src='/javascripts/head_mwi.js')
     
   body
-    a(href="/300x250") Click here for a 300x250 Ad
+    h1 Mobile Web Interstitials Demo
+    p 1. Open your developer tools and emulate any mobile device (eg. Google Pixel 2)
+    p 2. Ensure that localstorage for this page has been cleared, Mobile Web Interstitials are automatically frequency capped to ensure a quality user experience.
+    p 3. 
+      a(href="/300x250") Click here to trigger Mobile Web Interstitial
     
